--- a/templates/mag/medical_card.html
+++ b/templates/mag/medical_card.html
@@ -25,10 +25,10 @@
                     <th>Лечение</th>
                 </tr>
                 <tr>
-                    <td>Какая то медецинская история</td>
-                    <td>Какой то результат обследования</td>
-                    <td>Какой то диагноз</td>
-                    <td>Какой то лечение</td>
+                    <td>{{ medical_card.history }}</td>
+                    <td>{{ medical_card.result }}</td>
+                    <td>{{ medical_card.diagnosis }}</td>
+                    <td>{{ medical_card.treatment }}</td>
                 </tr>
             </table>
         </div>
