--- a/templates/mag/medical_card.html
+++ b/templates/mag/medical_card.html
@@ -25,7 +25,7 @@
                     <th>Лечение</th>
                 </tr>
                 <tr>
-                    <td>{{ medical_card.history }}</td>
+                    <td>{{ medical_card.medical_card }}</td>
                     <td>{{ medical_card.result }}</td>
                     <td>{{ medical_card.diagnosis }}</td>
                     <td>{{ medical_card.treatment }}</td>
