--- a/templates/mag/signup.html
+++ b/templates/mag/signup.html
@@ -19,7 +19,7 @@
                 <img src="{% static 'img/logo.png' %}" alt="none">
                 <h1>Маг</h1>
             </div>
-            <h2>Авторизация</h2>
+            <h2>Регистрация</h2>
             <div class="input">
                 <form action="" method="post">
                     {% csrf_token %}
