--- a/templates/mag/calendar.html
+++ b/templates/mag/calendar.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="{% static '/style.css' %}" />
-    <title>Маг - запись на прием и медицинская карта</title>
+    <title>Календарь</title>
 </head>
 <style>
     .selected {
