--- a/templates/mag/medical_card.html
+++ b/templates/mag/medical_card.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="{% static '/style.css' %}" />
-    <title>Title</title>
+    <title>Медицинская карта</title>
 </head>
 <body>
     <div class="users-wrapper">
