--- a/templates/mag/signup.html
+++ b/templates/mag/signup.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
     />
-      <title>adsad</title>
+      <title>Регистрация</title>
   </head>
   <body>
     <div class="login-wrapper">
