--- a/templates/mag/users.html
+++ b/templates/mag/users.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
     />
-    <title>Title</title>
+    <title>Пользователи</title>
 </head>
 <style>
     .selected {
