--- a/templates/mag/reception_nurse.html
+++ b/templates/mag/reception_nurse.html
@@ -42,7 +42,7 @@
                         {% endfor %}
                     </select>
                     <select name="schedule">
-                        <option>
+                        <option value="0">
                             Время
                         </option>
                         {% for c in calendar %}
