--- a/templates/mag/add_doctor.html
+++ b/templates/mag/add_doctor.html
@@ -8,7 +8,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="{% static '/style.css' %}" />
-    <title>Доабвить доктора</title>
+    <title>Добавить доктора</title>
 </head>
 <body>
     <div class="edit-wrapper">
